avro_derive/tests/ui/avro_rs_397_with_closure_parameters.stderr
error: Expected closure with 0 parameters
  --> tests/ui/avro_rs_397_with_closure_parameters.rs:22:5
   |
22 |     #[avro(with = |_named_schemas, _enclosing_namespace| Schema::Bytes)]
   |     ^

warning: unused import: `Schema`
  --> tests/ui/avro_rs_397_with_closure_parameters.rs:18:31
   |
18 | use apache_avro::{AvroSchema, Schema};
   |                               ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
